--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.22)
 project(Neuron_Liniowy C)
 
 set(CMAKE_C_STANDARD 11)
@@ -8,3 +8,5 @@ add_executable(Neuron_Liniowy
 
 add_executable(madaline
         main2.c)
+
+file(COPY main2_in.txt DESTINATION ${CMAKE_BINARY_DIR})
